<resources>
    <string name="app_name">LoginPage</string>
    <string name="usuario">Ingrese su nombre de usuario</string>
    <string name="contraseña">Ingrese su contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrar">REGÍSTRESE</string>
    <string name="exito">Usuario ingresado con éxito</string>
    <string name="fallo">Debes ingresar los datos solicitados para ingresar</string>
    <string name="reg_usuario">Elija un nombre de usuario</string>
    <string name="reg_email">Escriba su correo-e</string>
    <string name="reg_confirma">Escriba su contraseña nuevamente</string>
    <string name="reg_contra">Escriba una contraseña</string>
    <string name="reg_masc">Masculino</string>
    <string name="reg_fem">Femenino</string>
    <string name="reg_boton">Registrar</string>
    <string name="reg_label_radio">Género</string>
    <string name="reg_spinner_edad">Edad</string>
    <string name="url">https://desafiolatam.com/assets/home/logo-academia-bla-790873cdf66b0e681dfbe640ace8a602f5330bec301c409744c358330e823ae3.png</string>
</resources>
